[package]
name = "script_download_chunked_videos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["stream"]}
tokio = { version = "1.39.1", features = ["full"]}
